# lib/api.js
@@ -4,6 +4,7 @@ var express = require('express');
 var schema = require('./schema');
 var dispatcher = require('./dispatcher');
 var helper = require('./helper');
+var _ = require('lodash');
 var provider = null;
 
 try {
@@ -49,9 +50,12 @@ internals.router.post('/callbacks/', helper.validateBody(schema.subscribe), func
 });
 
 
-internals.router.delete('/callbacks/', helper.validateQuery(schema.unsubscribe), function (req, res) {
-    var phone = req.query.phone;
-    var serviceUrl = req.query.serviceUrl;
+internals.router.delete('/callbacks/phone/:phone/serviceUrl/:serviceUrl', function (req, res) {
+    if(!_.isString(req.params.phone)) res.status(400).json({'error': 'Wrong parameters'});
+    if(!_.isString(req.params.serviceUrl)) res.status(400).json({'error': 'Wrong parameters'});
+
+    var phone = req.params.phone;
+    var serviceUrl = req.params.serviceUrl;
 
     dispatcher.unsubscribe(phone, serviceUrl, function(err) {
         if (err) {
