# swagger.json
@@ -3,7 +3,7 @@
     "info": {
         "title": "smsService API",
         "description": "Send and receive SMS with smsService API",
-        "version": "0.5.3",
+        "version": "0.5.2",
         "termsOfService": "http://api.lineberty.net/terms/",
         "contact": {
             "name": "API Support",
@@ -75,8 +75,7 @@
                     "callback"
                 ],
                 "summary": "Subscribe to get the receiver response",
-                "description":
-                "The callback (serviceUrl and callbackPath) is a POST route which accepts to receive an <a href='/#/definitions/incomingSms'>#incomingSms</a> object",
+                "description": "The callback (serviceUrl and callbackPath) is a POST route which accepts to receive an <a href='/#/definitions/incomingSms'>#incomingSms</a> object",
                 "operationId": "subscribe",
                 "produces": [
                     "application/json"
@@ -110,7 +109,9 @@
                         "description": "Invalid token"
                     }
                 }
-            },
+            }
+        },
+        "/callbacks/phone/{phone}/serviceUrl/{serviceUrl}": {
             "delete": {
                 "tags": [
                     "callback"
@@ -130,15 +131,15 @@
                         "type": "string"
                     },
                     {
-                        "in": "query",
+                        "in": "path",
                         "name": "phone",
                         "description": "The phone number",
                         "type": "string",
-                        "match": "^00[0-9]{1,3}[0-9]{7,14}$",
+                        "pattern": "^00[0-9]{1,3}[0-9]{7,14}$",
                         "required": true
                     },
                     {
-                        "in": "query",
+                        "in": "path",
                         "name": "serviceUrl",
                         "description": "the service url of the callback",
                         "type": "string",
@@ -188,7 +189,7 @@
                     "pattern": "^00[0-9]{1,3}[0-9]{7,14}$"
                 },
                 "serviceUrl": {
-                    "type": "string",
+                    "type": "string"
                 },
                 "callbackPath": {
                     "type": "string",
@@ -200,15 +201,6 @@
                 "lang": {
                     "type": "string"
                 }
-            }
-        },
-        "unsubscribeRequest": {
-            "required": [
-                "phone",
-                "serviceUrl"
-            ],
-            "properties": {
-
             }
         },
         "incomingSms": {
